--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
       matrix:
         os: [ubuntu, windows, macos]
         os_version: [latest]
-        PYTHON_VERSION: ['3.10', '3.11', ]
+        PYTHON_VERSION: ['3.10', '3.12']
         PIP_SELECTOR: ['[all, tests, coverage]']
         include:
           # test oldest supported version of main dependencies on python 3.8
@@ -27,7 +27,7 @@ jobs:
             OLDEST_SUPPORTED_VERSION: true
             # Don't install pillow 10.4.0 because of its incompatibility with numpy 1.20.x
             # https://github.com/python-pillow/Pillow/pull/8187
-            DEPENDENCIES: dask[array]==2022.9.2 matplotlib==3.6.0 numba==0.53 numpy==1.20.0 scipy==1.6 scikit-image==0.18 scikit-learn==1.0.1 pillow!=10.4.0
+            DEPENDENCIES: dask[array]==2022.9.2 matplotlib==3.6.0 numba==0.53 numpy==1.20.0 scipy==1.6 sympy==1.10 scikit-image==0.18 scikit-learn==1.0.1 pillow!=10.4.0 numexpr==2.8
             LABEL: -oldest
           # test minimum requirement
           - os: ubuntu
@@ -41,11 +41,11 @@ jobs:
             PIP_SELECTOR: '[all, tests, coverage]'
           - os: ubuntu
             os_version: latest
-            PYTHON_VERSION: '3.12'
+            PYTHON_VERSION: '3.11'
             PIP_SELECTOR: '[all, tests, coverage]'
           - os: macos
             os_version: '13'
-            PYTHON_VERSION: '3.12'
+            PYTHON_VERSION: '3.11'
             PIP_SELECTOR: '[all, tests, coverage]'
 
     steps:
