--- a/.github/workflows/tests_extension.yml
+++ b/.github/workflows/tests_extension.yml
@@ -20,7 +20,7 @@ jobs:
 
     env:
       MPLBACKEND: agg
-      EXTENSION: kikuchipy lumispy pyxem atomap
+      EXTENSION: atomap etspy exspy holospy kikuchipy lumispy pyxem
       TEST_DEPS: pytest pytest-xdist pytest-rerunfailures pytest-instafail
       PYTHON_VERSION: '3.12'
     defaults:
@@ -37,9 +37,10 @@ jobs:
           activate-environment: "test"
           conda-remove-defaults: "true"
 
-      - name: Install pip and Test dependencies
+      - name: Install pip, astra-toolbox, ffmpeg and test dependencies
         run: |
-          mamba install pip ${{ env.TEST_DEPS }}
+          # astra-toolbox and ffmpeg are etspy dependencies
+          mamba install pip astra-toolbox ffmpeg ${{ env.TEST_DEPS }} 
           
       - name: Conda info
         run: |
@@ -49,7 +50,7 @@ jobs:
       - name: Install extensions (release)
         if: contains(matrix.EXTENSION_VERSION, 'release')
         run: |
-          mamba install hyperspy-base ${{ env.EXTENSION }} ${{ env.TEST_DEPS }}
+          mamba install hyperspy-base ${{ env.EXTENSION }}
 
       - name: Conda list
         run: |
@@ -62,12 +63,13 @@ jobs:
       - name: Install Extension (dev)
         if: contains(matrix.EXTENSION_VERSION, 'dev')
         run: |
-          pip install https://github.com/lumispy/lumispy/archive/main.zip
-          pip install https://github.com/pyxem/kikuchipy/archive/develop.zip
-          pip install https://github.com/pyxem/pyxem/archive/main.zip
-          pip install https://gitlab.com/atomap/atomap/-/archive/master/atomap-master.zip
-          pip install https://github.com/hyperspy/holospy/archive/main.zip
+          pip install https://github.com/atomap-dev/atomap/archive/main.zip
+          pip install https://github.com/usnistgov/etspy/archive/master.zip
           pip install https://github.com/hyperspy/exspy/archive/main.zip
+          pip install https://github.com/hyperspy/holospy/archive/main.zip
+          pip install https://github.com/pyxem/kikuchipy/archive/develop.zip
+          pip install https://github.com/lumispy/lumispy/archive/main.zip
+          pip install https://github.com/pyxem/pyxem/archive/main.zip
 
       - name: Install xvfb
         run: |
@@ -104,3 +106,8 @@ jobs:
         if: ${{ always() }}
         run: |
           python -m pytest --pyargs atomap
+
+      - name: Run ETSpy Test Suite
+        if: ${{ always() }}
+        run: |
+          python -m pytest --pyargs etspy
