Reduce frequency of updating `pre-commit` configuration from weekly to monthly

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -13,3 +13,4 @@ ci:
     # "pre-commit.ci autofix" on a pull request to manually trigger auto-fixing 
     autofix_prs: false
     autoupdate_branch: 'RELEASE_next_patch'
+    autoupdate_schedule: monthly
